--- a/projects/shongo-calendar/src/lib/shongo-calendar.component.html
+++ b/projects/shongo-calendar/src/lib/shongo-calendar.component.html
@@ -1,102 +1,118 @@
-<div class="shongo-calendar shongo-calendar--fullscreen" [ngSwitch]="view">
-  <div class="shongo-calendar__overlay" *ngIf="loading" [@loading]>
-    <div class="shongo-calendar__loading">
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
+<ng-container *ngIf="{ dragging: isDragging$ | async } as events">
+  <div [ngSwitch]="view" class="shongo-calendar">
+    <div class="shongo-calendar__overlay" *ngIf="loading" [@loading]>
+      <div class="shongo-calendar__loading">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
     </div>
+    <mwl-calendar-day-view
+      *ngSwitchCase="CalendarView.Day"
+      [viewDate]="viewDate"
+      [events]="getCalendarEvents()"
+      [tooltipTemplate]="calendarTooltip"
+      [hourSegmentTemplate]="hourSegment"
+      [refresh]="refresh$"
+      [eventTitleTemplate]="eventTitle"
+      (eventTimesChanged)="eventTimesChanged($event)"
+      (eventClicked)="handleEventClick($event.event)"></mwl-calendar-day-view>
+    <mwl-calendar-week-view
+      *ngSwitchCase="CalendarView.Week"
+      [viewDate]="viewDate"
+      [events]="getCalendarEvents()"
+      [tooltipTemplate]="calendarTooltip"
+      [hourSegmentTemplate]="hourSegment"
+      [weekStartsOn]="weekStartsOn"
+      [refresh]="refresh$"
+      [eventTitleTemplate]="eventTitle"
+      (eventTimesChanged)="eventTimesChanged($event)"
+      (dayHeaderClicked)="selectDate($event.day.date)"
+      (eventClicked)="handleEventClick($event.event)"></mwl-calendar-week-view>
+    <mwl-calendar-month-view
+      *ngSwitchCase="CalendarView.Month"
+      [viewDate]="viewDate"
+      [events]="getCalendarEvents()"
+      [tooltipTemplate]="calendarTooltip"
+      [refresh]="refresh$"
+      (dayClicked)="selectDate($event.day.date)"
+      (eventClicked)="handleEventClick($event.event)"></mwl-calendar-month-view>
   </div>
-  <mwl-calendar-day-view
-    *ngSwitchCase="CalendarView.Day"
-    [viewDate]="viewDate"
-    [events]="events"
-    [tooltipTemplate]="calendarTooltip"
-    [hourSegmentTemplate]="hourSegment"
-    [refresh]="refresh$"
-    [eventTitleTemplate]="eventTitle"
-    (eventTimesChanged)="eventTimesChanged($event)"
-    (eventClicked)="handleEventClick($event.event)"></mwl-calendar-day-view>
-  <mwl-calendar-week-view
-    *ngSwitchCase="CalendarView.Week"
-    [viewDate]="viewDate"
-    [events]="events"
-    [tooltipTemplate]="calendarTooltip"
-    [hourSegmentTemplate]="hourSegment"
-    [weekStartsOn]="weekStartsOn"
-    [refresh]="refresh$"
-    [eventTitleTemplate]="eventTitle"
-    (eventTimesChanged)="eventTimesChanged($event)"
-    (dayHeaderClicked)="openDate($event.day.date)"
-    (eventClicked)="handleEventClick($event.event)"></mwl-calendar-week-view>
-  <mwl-calendar-month-view
-    *ngSwitchCase="CalendarView.Month"
-    [viewDate]="viewDate"
-    [events]="events"
-    [tooltipTemplate]="calendarTooltip"
-    [refresh]="refresh$"
-    (dayClicked)="openDate($event.day.date)"
-    (eventClicked)="handleEventClick($event.event)"></mwl-calendar-month-view>
-</div>
 
-<!-- Hour segment template -->
-<ng-template
-  #hourSegment
-  let-segment="segment"
-  let-locale="locale"
-  let-segmentHeight="segmentHeight"
-  let-isTimeLabel="isTimeLabel">
-  <div
-    #segmentElement
-    class="cal-hour-segment"
-    [style.height.px]="segmentHeight"
-    [class.cal-hour-start]="segment.isStart"
-    [class.cal-after-hour-start]="!segment.isStart"
-    [ngClass]="segment.cssClass"
-    (mousedown)="
-      allowSlotSelection && startDragToCreate(segment, segmentElement)
-    ">
-    <div class="cal-time" *ngIf="isTimeLabel">
-      {{ segment.date | calendarDate : 'weekViewHour' : locale }}
+  <!-- Hour segment template -->
+  <ng-template
+    #hourSegment
+    let-segment="segment"
+    let-locale="locale"
+    let-segmentHeight="segmentHeight"
+    let-isTimeLabel="isTimeLabel">
+    <div
+      #segmentElement
+      class="cal-hour-segment"
+      [style.height.px]="segmentHeight"
+      [class.cal-hour-start]="segment.isStart"
+      [class.cal-after-hour-start]="!segment.isStart"
+      [ngClass]="segment.cssClass"
+      (mousedown)="
+        allowSlotSelection && startDragToCreate(segment, segmentElement)
+      ">
+      <div *ngIf="isTimeLabel" class="shongo-calendar__time cal-time">
+        {{ segment.date | calendarDate : 'weekViewHour' : locale }}
+      </div>
     </div>
-  </div>
-</ng-template>
+  </ng-template>
 
-<!-- Tooltip template -->
-<ng-template
-  #calendarTooltip
-  let-contents="contents"
-  let-placement="placement"
-  let-event="event">
-  <div
-    class="shongo-calendar__tooltip cal-tooltip"
-    [ngClass]="'cal-tooltip-' + placement">
-    <div class="cal-tooltip-arrow"></div>
-    <div class="cal-tooltip-inner">
-      <b>{{ 'tooltipDescription' | translate }}:</b>
-      <span [innerHtml]="contents"></span>
-      <b>{{ 'tooltipTimeSlot' | translate }}:</b>
-      <span [innerHtml]="getSlotString(event)"></span>
-      <b>{{ 'tooltipReservedBy' | translate }}:</b>
-      <span [innerHtml]="event.meta.owner"></span>
-      <a
-        *ngIf="event.meta.ownerEmail; else unknownOwner"
-        [href]="'mailto:' + event.meta.ownerEmail"
-        >{{ event.meta.ownerEmail }}</a
-      >
-
-      <ng-template #unknownOwner>
-        <span>{{ 'unknown' | translate }}</span>
-      </ng-template>
+  <!-- Tooltip template -->
+  <ng-template
+    #calendarTooltip
+    let-contents="contents"
+    let-placement="placement"
+    let-event="event">
+    <div
+      [hidden]="events.dragging"
+      [ngClass]="'cal-tooltip-' + placement"
+      class="shongo-calendar__tooltip cal-tooltip">
+      <div class="cal-tooltip-arrow"></div>
+      <div class="cal-tooltip-inner">
+        <b>{{ 'tooltipDescription' | translate }}:</b>
+        <span>{{ contents }}</span>
+        <b>{{ 'tooltipTimeSlot' | translate }}:</b>
+        <span>{{ getSlotString(event) }}</span>
+        <b>{{ 'tooltipReservedBy' | translate }}:</b>
+        <span *ngIf="!event.meta || event.meta.owner; else unknownOwner">
+          <ng-container
+            *ngTemplateOutlet="
+              ownerData;
+              context: {
+                eventOwner: !event.meta ? currentUser : event.meta.owner
+              }
+            "></ng-container>
+        </span>
+      </div>
     </div>
-  </div>
-</ng-template>
+  </ng-template>
 
-<!-- Event title template -->
-<ng-template #eventTitle let-event="event" let-view="view">
-  <span
-    class="shongo-calendar__title cal-event-title"
-    [innerHTML]="event.title | calendarEventTitle : view : event"
-    [attr.aria-hidden]="{} | calendarA11y : 'hideEventTitle'">
-  </span>
-</ng-template>
+  <!-- Event title template -->
+  <ng-template #eventTitle let-event="event" let-view="view">
+    <span
+      class="shongo-calendar__title cal-event-title"
+      [attr.aria-hidden]="{} | calendarA11y : 'hideEventTitle'">
+      {{ event.title | calendarEventTitle : view : event }}
+    </span>
+  </ng-template>
+
+  <ng-template #ownerData let-eventOwner="eventOwner">
+    <span *ngIf="eventOwner; else unknownOwner">
+      {{ eventOwner.name }}
+      <span *ngIf="eventOwner.email as email">
+        (<a href="mailto:{{ email }}">{{ email }}</a
+        >)
+      </span>
+    </span>
+  </ng-template>
+
+  <ng-template #unknownOwner>
+    <span>{{ 'unknown' | translate }}</span>
+  </ng-template>
+</ng-container>
