--- a/projects/shongo-calendar/src/lib/components/shongo-calendar/shongo-calendar.component.scss
+++ b/projects/shongo-calendar/src/lib/components/shongo-calendar/shongo-calendar.component.scss
@@ -4,10 +4,6 @@
   touch-action: none;
 }
 
-.unselectable {
-  @include unselectable;
-}
-
 .shongo-calendar {
   --calendar-primary: var(--shongo-calendar-primary, rgb(0 200 83));
 
@@ -16,23 +12,6 @@
   &__title,
   &__time {
     @include unselectable;
-  }
-
-  &__overlay {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(
-      0deg,
-      rgb(245 245 245 / 60%) 0%,
-      rgb(255 255 255 / 60%) 100%
-    );
-    top: 0;
-    left: 0;
-    z-index: 1;
   }
 
   &__tooltip {
@@ -51,12 +30,8 @@
   }
 
   &__event {
-    &--white {
-      .shongo-calendar {
-        &__title {
-          color: white;
-        }
-      }
+    &--unselectable {
+      @include unselectable;
     }
   }
 }
