--- a/projects/shongo-calendar/src/lib/components/shongo-calendar/shongo-calendar.component.scss
+++ b/projects/shongo-calendar/src/lib/components/shongo-calendar/shongo-calendar.component.scss
@@ -4,6 +4,11 @@
   touch-action: none;
 }
 
+@mixin fill {
+  width: 100%;
+  height: 100%;
+}
+
 .shongo-calendar {
   --calendar-primary: var(--shongo-calendar-primary, rgb(0 200 83));
 
@@ -32,6 +37,39 @@
   &__event {
     &--unselectable {
       @include unselectable;
+    }
+  }
+
+  &--fill {
+    @include fill;
+
+    .shongo-calendar {
+      &__month-view {
+        @include fill;
+
+        display: block;
+      }
+    }
+
+    .cal-month-view {
+      @include fill;
+
+      display: flex;
+      flex-direction: column;
+    }
+
+    .cal-days {
+      display: flex;
+      flex-direction: column;
+      flex: 1;
+
+      > div {
+        flex: 1;
+      }
+    }
+
+    .cal-cell-row {
+      @include fill;
     }
   }
 }
