feat: add touch events

--- a/projects/shongo-calendar/src/lib/components/shongo-calendar/shongo-calendar.component.html
+++ b/projects/shongo-calendar/src/lib/components/shongo-calendar/shongo-calendar.component.html
@@ -56,9 +56,8 @@
       [class.cal-hour-start]="segment.isStart"
       [class.cal-after-hour-start]="!segment.isStart"
       [ngClass]="segment.cssClass"
-      (mousedown)="
-        allowSlotSelection && startDragToCreate(segment, segmentElement)
-      ">
+      (mousedown)="startDragToCreate(segment, segmentElement)"
+      (touchstart)="startDragToCreate(segment, segmentElement)">
       <div *ngIf="isTimeLabel" class="shongo-calendar__time cal-time">
         {{ segment.date | calendarDate : 'weekViewHour' : locale }}
       </div>
