--- a/projects/shongo-calendar/src/lib/components/shongo-calendar/shongo-calendar.component.html
+++ b/projects/shongo-calendar/src/lib/components/shongo-calendar/shongo-calendar.component.html
@@ -51,7 +51,7 @@
     let-isTimeLabel="isTimeLabel">
     <div
       #segmentElement
-      class="cal-hour-segment"
+      class="cal-hour-segment shongo-calendar__hour-segment"
       [style.height.px]="segmentHeight"
       [class.cal-hour-start]="segment.isStart"
       [class.cal-after-hour-start]="!segment.isStart"
